🔧 refactor: 重构初始化逻辑并添加FastAPI支持   - 🧩 将代码重构为模块化函数，提升可维护性   - 🗑️ 移除.env.template，直接使用环境变量   - 🚀 添加FastAPI依赖，从Flask切换至FastAPI   - 🛠️ 改进训练数据的错误处理与日志记录   - 🔒 显式转换MySQL端口以确保安全性   - 🌐 关联后端服务现代化工作

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "requests", "tabulate", "plotly", "pandas", "sqlparse", "kaleido", "flask", "flask-sock", "flasgger", "sqlalchemy"
+    "requests", "tabulate", "plotly", "pandas", "sqlparse", "kaleido==0.2.1", "flask", "flask-sock", "flasgger", "sqlalchemy",
+    "fastapi>=0.110.0", "uvicorn[standard]>=0.28.0", "python-multipart", "python-dotenv>=1.0.0", "pydantic>=2.6.0"
 ]
+
+packages = ["backend","src"]
 
 [project.urls]
 "Homepage" = "https://github.com/vanna-ai/vanna"
