--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,7 @@ MYSQL_DB=ns_dws
 QWEN_KEY=your_qwen_key
 QWEN_MODEL=qwen-max-latest
 QWEN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+
+# nextjs
+NEXT_PUBLIC_BASE_URL=
+NEXT_FAST_API_BASE_URL=
